# HTKUtils

./: .gitmodules  CMakeLists.txt  README.md
src/: htk2db.cpp  htk2txt.cpp  htk_ceps_dist.cpp  htk_contract.cpp  htk_shuffle.cpp  htk_split.cpp  htk_split_from_phn.cpp  htk_stats.cpp  htkcat.cpp  txt2htk.cpp
